--- a/app/styles/components/_container.scss
+++ b/app/styles/components/_container.scss
@@ -19,9 +19,29 @@
     align-items: center;
     display: flex;
   }
+
+  input {
+    box-shadow: none;
+    border-radius: 5px;
+  }
+
+  .todo-toggle {
+    cursor: pointer;
+  }
+}
+
+.container__message {
+  color: $light-color;
+  margin: 2rem auto;
+  text-align: center;
 }
 
 .container__footer {
   border-top: 1px solid $light-grey-border;
   padding: 1rem 1rem 0 1rem;
+
+  input, button {
+    box-shadow: none;
+    border-radius: 5px;
+  }
 }
